Fix DocumentationUnitControllerDocxIT
RISDEV-9852